Primeira versão do template
Criado o campo de busca, botão de busca, filtros e nomes dos
integrantes.

--- a/css/style.css
+++ b/css/style.css
@@ -203,11 +203,11 @@ Responsive navbar-brand image CSS
 }
 
 .headerColor{
-    background-color: #F6CC1E;
+    background-color: #f2f2f2;
 }
 
 .backgroundColor{
-    background-color: floralwhite;
+    background-color: #ffcc00;
 }
 
 .headerContainer{
