--- a/css/style.css
+++ b/css/style.css
@@ -207,13 +207,17 @@ Responsive navbar-brand image CSS
 }
 
 .backgroundColor{
-    background-color: #ffcc00;
+    background-color: #33001a;
 }
 
 .headerContainer{
     margin-left: 15px;
     margin-right: 15px;
     width: auto;
+}
+
+.mapStyle{
+	border: 0px solid #f2f2f2;
 }
 
 /* Larger logo - simply adjust top bottom padding to make logo larger */
